# robot_systems

./: README.md
robot_system/: .gitignore
robot_system/laptop_ws/src/DATN/: CMakeLists.txt  package.xml
robot_system/laptop_ws/src/DATN/launch/: gazebo.launch.py  sim_full_launch.py
robot_system/laptop_ws/src/DATN/meshes/: base_link.STL  free_Link.STL  left_Link.STL  right_Link.STL
robot_system/laptop_ws/src/DATN/urdf/: robot_des.urdf
robot_system/laptop_ws/src/DATN/worlds/: datn_track_world.world
robot_system/laptop_ws/src/bringup_pkg/: package.xml  setup.py
robot_system/laptop_ws/src/bringup_pkg/launch/: system_launch.py
robot_system/laptop_ws/src/decision_pkg/: package.xml  setup.py
robot_system/laptop_ws/src/decision_pkg/decision_pkg/: decision_node.py  sim_motor_bridge_node.py  teleop_key.py
robot_system/laptop_ws/src/interfaces_pkg/: CMakeLists.txt
robot_system/laptop_ws/src/interfaces_pkg/msg/: Control.msg
robot_system/laptop_ws/src/perception_pkg/: package.xml  setup.py
robot_system/laptop_ws/src/perception_pkg/perception_pkg/: FastSCNN.onnx  FastSCNN.onnx.data  __init__.py  best.pth  lane_detection_node.py  traffic_sign_node (copy).py  traffic_sign_node.py
robot_system/laptop_ws/src/visualization_pkg/: package.xml  setup.py
robot_system/raspberry_ws/src/camera_pkg/: package.xml  setup.py
robot_system/raspberry_ws/src/camera_pkg/camera_pkg/: camera_node.py
robot_system/raspberry_ws/src/control_pkg/: package.xml  setup.py
robot_system/raspberry_ws/src/interfaces_pkg/: package.xml
(+1 files in other folders)
