<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_pkg</name>
  <version>0.0.0</version>
  <description>Gói xử lý ảnh Lane Detection (FastSCNN) và Traffic Sign (YOLOv8) tối ưu GPU</description>
  <maintainer email="tuyen@todo.todo">tuyen</maintainer>
  <license>Apache-2.0</license>

  <!-- Các gói phụ thuộc cốt lõi của ROS2 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Gói custom chứa định dạng thông điệp Control của hệ thống -->
  <depend>interfaces_pkg</depend>

  <!-- Khai báo thư viện Python bên thứ ba chạy trên GPU -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
